# SM-R860

./: .gitignore  README.md  config
Development/: check_if_charging_boot.c
Development/input/: scan  scan.c
Development/print_time/: ntp.c  ntp.h  print_time.c
Information/: BugsFeatures.md  EnableWifiAP.md  Hardware.md
ModifiedKernel/: Makefile  build_kernel.sh
ModifiedKernel/arch/arm64/boot/dts/exynos/: s5e5515-rmem_nocp.dtsi
ModifiedKernel/arch/arm64/boot/dts/samsung/: battery_data_fresh_common.dtsi  exynos5515-fresh_input_common.dtsi
ModifiedKernel/arch/arm64/configs/: exynos5515-freshbs_defconfig
ModifiedKernel/drivers/net/wireless/infineon/ifxdhd/: dhd_custom_cis.c  dhd_ip.c
ModifiedKernel/drivers/sensorhub/slsi/: ssp_lpm.c
ModifiedKernel/drivers/sensorhub/slsi/factory/: accel_lsm6dsl.c  accel_lsm6dsl_32g.c  digital_hall_ak09973d.c  gyro_lsm6dsl.c  hrm_pps960.c  hrm_pps960_bia.c  light_opt3007.c  magnetic_ak09918c.c  pressure_lps25h.c  temperature_mlx90632.c
ModifiedKernel/security/samsung/defex_lsm/: defex_packed_rules.inc  pack_rules
WatchApp/: CMakeLists.txt  build.sh  charging_screen.c  charging_screen.h  config.json  config_handler.c  config_handler.h  duck_watchface.c  duck_watchface.h  entry.c  framebuffer.c  framebuffer.h  input_handler.c  input_handler.h  network_handler.c  network_handler.h  ntp_handler.c  ntp_handler.h  utils.c  utils.h
WatchApp/screens/: charging_screen.c  shutdown_screen.c  shutdown_screen.h
WatchApp/watchfaces/: basic_digital.c  basic_digital.h  uwoslab_serbio.c  uwoslab_serbio.h
(+2 files in other folders)
